k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1 # No Of Pod Copies
  selector:
    matchLabels:
      app: nginx
  template: # Pod Template
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: c1
        image: nginx
        ports:
        - containerPort: 80
