k8s/multi-pod-fail.yaml
# Run Multi Container Pod
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod-1
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 80
  - name: c2
    image: nginx
    ports:
    - containerPort: 80
