k8s/pod.yaml
# Run Nginx POD
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-1
spec:
  containers:
  - name: c1
    image: nginx
    ports:
    - containerPort: 80
