k8s/qa-namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm
  namespace: qa
spec:
  replicas: 1 # No Of Pod Copies
  selector:
    matchLabels:
      app: ecomm
  template: # Pod Template
    metadata:
      labels:
        app: ecomm
    spec:
      containers:
      - name: c1
        image: ravi2krishna/ecomm
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecomm-svc
  namespace: qa
spec:
  type: NodePort
  selector:
    app: ecomm
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
